--- a/static/base.css
+++ b/static/base.css
@@ -1,11 +1,14 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url(backgr.png);
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
+  html{
+    background-image: linear-gradient(to bottom right, rgba(3,98,255,255)
+    , rgba(210,98,255,255));
+    min-height: 100%;
+  }
   .navcontainer{
     border-bottom: 1.5px black solid;
   }
