--- a/static/mypage.css
+++ b/static/mypage.css
@@ -14,8 +14,8 @@ input[type=text]{
 }
 
 input[type=submit], input[type=button] {
-  background-color: #04AA6D;
-  color: white;
+  background-color: white;
+  color:mediumslateblue;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -27,7 +27,7 @@ input[type=submit], input[type=button] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color:lightslategrey;
 }
 
 input[type=button]:hover {
@@ -36,7 +36,7 @@ input[type=button]:hover {
 
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  color:white;
   padding: 20px;
   width: 60%;
   margin: auto auto;
