--- a/templates/mycontrs.html
+++ b/templates/mycontrs.html
@@ -1,37 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ super() }} | My Contributions {% endblock %}
 {% block style %} <link rel="stylesheet" href="{{url_for('static', filename='mycontrs.css')}}">
-<script>
-    $(document).ready(function() {
-    if($_SESSION['logged_in'] == 1) {
-        ("body").hide();
-    }
-
-       $(" [class*='dis-edt-btn-']").click(function(){
-        var form = $(this).closest("form");
-        $("." + form.attr('class')+ " input[type=button]").hide();
-        $("." + form.attr('class')+ " input[type=submit]").show();
-        $("." + form.attr('class')+ ' input[type=text]').removeAttr('disabled');
-        $("." + form.attr('class')+ ' textarea').removeAttr('disabled');
-    });
-
-    $(" [class*='dis-done-btn-']").click(function(){
-        var form = $(this).closest("form");
-        form.attr('method','post');
-        form.attr('action','/diseaseedit');
-    });
-
-    $(" [class*='dis-del-btn-']").click(function(){
-        var name = $(this).attr('class');
-        name = name.substring(12);
-        var form = $(this).closest("form");
-        form.attr('method','post');
-        form.attr('action','/diseasedelete/' + name);
-    });
-
-    $( "[class*='my-dis-form-'] input[type=text], [class*='my-dis-form-'] textarea" ).attr('disabled','disabled');
-    $( "[class*='dis-done-btn-']" ).hide();
-});
+<script src="{{url_for('static', filename='mycontrs.js')}}">
 </script> {% endblock %}
 {% block content %}
 <div class="contr">
@@ -92,6 +62,7 @@
         <h2>{{r.dtype.name}}</h2>
         <p>{{r.dtype.description}}</p>
         {% for disease in r.diseases %}
+        <div>
             <form class="my-dis-form-{{disease[0].dis_id}}" action="{{url_for('mycontrs')}}" method="get">
 
                 <label for="fname">Disease name</label>
@@ -119,6 +90,7 @@
                 <input type="submit" value="Delete" class="dis-del-btn-{{disease[0].dis_id}}">
             
               </form>
+        </div>
         {% endfor %}
     </div>
     {% endfor %}
